--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
     person(given = "Jason",
            family = "Moy",
            role = c("aut", "cre"),
-           email = "jasonmoy28@gmail.com",
+           email = "jmoy1@uw.edu",
            comment = c(ORCID = "0000-0001-8795-3311"))
 Description: Easy to use package for publication-ready plots.
 License: GPL (>= 3)
