--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,10 @@ Imports:
     dplyr,
     ggplot2,
     insight,
-    Rcpp (>= 1.0.7),
     rlang,
     stringr,
-    tibble
+    tibble,
+    tidyr
 RoxygenNote: 7.2.0
 Suggests: 
     covr
